# trace_parser

./: .gitignore  README.md  TraceParser.py  custom_types.py  pyproject.toml  requirements.txt  ruff.toml
notebook/: darshan_et.ipynb  recorder_et.ipynb  scorep_et.ipynb
src/: IOOP.py  custom_types.py
src/darshan_trace_parser/: IOOP.py  TraceParser.py  custom_types.py
src/recorder_trace_parser/: IOOP.py  README.md  TraceParser.py  custom_types.py
src/scorep_trace_parser/: IOOP.py  IORegion.py  README.md  TraceParser.py  __init__.py  custom_types.py
